--- a/style.css
+++ b/style.css
@@ -27,5 +27,33 @@ body {
 
 .flex {
   display: flex;
-  gap: 5px;
+  gap: 2px;
+}
+
+input, button {
+  border: 1px solid #dedede;
+  border-top-left-radius: 4px;
+  border-bottom-left-radius: 4px;
+  font-size: 15px;
+  padding: 9px 10px;
+  margin: 0;
+}
+
+.search-btn {
+  border-left: 0;
+  border-radius: 0;
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+  cursor: pointer;
+}
+
+.random-btn {
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+@media (max-width: 500px) {
+  input {
+    width: 100%;
+  }
 }/*# sourceMappingURL=style.css.map */
