--- a/style.sass
+++ b/style.sass
@@ -49,6 +49,42 @@ input, button
         cursor: pointer
         border-radius: 5px
 
+.meals
+    display: grid
+    grid-template-columns: repeat(4, 1fr)
+    gap: 15px
+    margin-top: 10px
+    
+    
+.meal
+    cursor: pointer
+    position: relative
+    height: 180px
+    width: 180px
+    text-align: center
+    img
+        width: 100%
+        height: 100%
+        border: 2px solid #fff  
+        border-radius: 5px  
+    &-info
+        position: absolute
+        top: 0
+        left: 0
+        height: 100%
+        width: 100%
+        background-color: rgba(0, 0, 0, 0.4)
+        display: flex
+        align-items: center
+        justify-content: center
+        opacity: 0
+        transition: opacity 0.2s
+        &:hover
+            opacity: 1
+
+
+
+
 
 @media (max-width: 500px)
     input
