--- a/style.sass
+++ b/style.sass
@@ -23,10 +23,11 @@ body
     align-items: center
     justify-content: center
     text-align: center
+    margin-top: 500px
 
 .flex
-    display: flex
     gap: 2px
+    display: inline-block
 
 input, button
     border: 1px solid #dedede
@@ -54,6 +55,7 @@ input, button
     grid-template-columns: repeat(4, 1fr)
     gap: 15px
     margin-top: 10px
+
     
     
 .meal
