--- a/style.sass
+++ b/style.sass
@@ -84,7 +84,13 @@ input, button
         &:hover
             opacity: 1
 
-
+.single-meal
+    border: 1px solid #fff
+    margin-top: 15px
+    padding: 10px
+    display: flex
+    flex-direction: column
+   
 
 
 
