--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .flex {
   gap: 2px;
-  display: inline-block;
+  display: flex;
 }
 
 input, button {
@@ -55,6 +55,25 @@ input, button {
   grid-template-columns: repeat(4, 1fr);
   gap: 15px;
   margin-top: 10px;
+}
+@media (max-width: 800px) {
+  .meals {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media (max-width: 600px) {
+  .meals {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (max-width: 400px) {
+  .meals {
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .meals .meal {
+    width: 250px;
+    height: 250px;
+  }
 }
 
 .meal {
@@ -88,11 +107,40 @@ input, button {
 }
 
 .single-meal {
-  border: 1px solid #fff;
+  border: 2px solid rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
   margin-top: 15px;
   padding: 10px;
   display: flex;
   flex-direction: column;
+  font-size: 18px;
+  justify-content: center;
+  align-items: center;
+}
+.single-meal img {
+  width: 300px;
+  border: 2px solid rgba(255, 255, 255, 0.8);
+  border-radius: 10px;
+}
+.single-meal-info {
+  font-size: 25px;
+  font-weight: bold;
+  display: inline-block;
+}
+
+.main ul {
+  padding: 0;
+  list-style: none;
+}
+.main li {
+  border: 1px solid rgba(255, 255, 255, 0.8);
+  border-radius: 5px;
+  background-color: #fff;
+  display: inline-block;
+  color: #1f1f1f;
+  font-weight: bold;
+  padding: 5px;
+  margin: 5px;
 }
 
 @media (max-width: 500px) {
