--- a/style.sass
+++ b/style.sass
@@ -27,7 +27,7 @@ body
 
 .flex
     gap: 2px
-    display: inline-block
+    display: flex
 
 input, button
     border: 1px solid #dedede
@@ -55,8 +55,15 @@ input, button
     grid-template-columns: repeat(4, 1fr)
     gap: 15px
     margin-top: 10px
-
-    
+    @media (max-width: 800px)
+        grid-template-columns: repeat(3, 1fr)
+    @media (max-width: 600px)
+        grid-template-columns: repeat(2, 1fr)
+    @media (max-width: 400px)
+        grid-template-columns: repeat(1, 1fr)
+        .meal   
+            width: 250px
+            height: 250px 
     
 .meal
     cursor: pointer
@@ -85,15 +92,40 @@ input, button
             opacity: 1
 
 .single-meal
-    border: 1px solid #fff
+    border: 2px solid rgba(255, 255, 255, 0.5)
+    border-radius: 10px
     margin-top: 15px
     padding: 10px
     display: flex
     flex-direction: column
-   
+    font-size: 18px
+    justify-content: center
+    align-items: center
+    img
+        width: 300px
+        border: 2px solid rgba(255, 255, 255, 0.8)
+        border-radius: 10px
+    &-info
+        font-size: 25px
+        font-weight: bold
+        display: inline-block
+        
 
+.main
+    ul
+        padding: 0
+        list-style: none
+    li
+        border: 1px solid rgba(255, 255, 255, 0.8)
+        border-radius: 5px
+        background-color: #fff
+        display: inline-block
+        color: #1f1f1f
+        font-weight: bold
+        padding: 5px
+        margin: 5px
 
-
+               
 @media (max-width: 500px)
     input
         width: 100%
